Fixed more Sonar issues (#103)